MB-45550 - ensure very long words wrap in error/confirmation dialog
Use 'break-word' to ensure that super long words get broken and don't
run off the window.

Reviewed-on: http://review.couchbase.org/c/query-ui/+/150876
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/query.css
+++ b/query-ui/ui-current/query.css
@@ -300,6 +300,9 @@ ul.wb-explain-tooltip-list li ul li {
   font-style: italic;
 }
 
+.break-word {
+  word-break: break-word;
+}
 /* need to be able to override parent style for warning icon */
 
 .force-orange-3 {
